<resources>
    <string name="app_name">FoodZen</string>

    <!--Keys-->
    <string name="facebook_app_id">628332770673524</string>
    <!--<string name="google_application_id" translatable="false">4440659588319pil980o6jm2bvrd7rvq90a601o3j8hb.apps.googleusercontent.com
</string>-->


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_email">Sign in or register</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="action_sign_in_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_twitter">Sign in with Twitter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="user_login">Name</string>
    <string name="user_about">About</string>
    <string name="user_pic_add_or_update"><u>Add or update</u></string>
    <string name="user_pic_delete"><u>Delete</u></string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="empty_view">There is no photo now</string>
    <string name="user_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_search">Search</string>
    <string name="action_user">User</string>
    <string name="action_map">Map</string>

</resources>
