<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_user"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/action_user"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="200"
        android:title="@string/action_map"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="300"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
</menu>
