<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/activity_user"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingBottom="@dimen/activity_vertical_margin"
                                             android:paddingLeft="@dimen/activity_horizontal_margin"
                                             android:paddingRight="@dimen/activity_horizontal_margin"
                                             android:paddingTop="@dimen/activity_vertical_margin"
                                             tools:context="mobi.foodzen.foodzen.ui.UserActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_login_layout"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_view_border"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login_layout"
        />

    <TextView
        android:id="@+id/user_add_update_pic"
        style="@style/TextViewLinkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_pic_add_or_update"
        app:layout_constraintLeft_toRightOf="@+id/user_pic"
        app:layout_constraintTop_toBottomOf="@+id/user_login_layout"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/user_delete_pic"
        style="@style/TextViewLinkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_pic_delete"
        app:layout_constraintLeft_toLeftOf="@+id/user_add_update_pic"
        app:layout_constraintTop_toBottomOf="@+id/user_add_update_pic"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_about_layout"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pic"
        tools:layout_constraintLeft_creator="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_about"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/user_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Change password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_about_layout"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/user_done_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/com_facebook_button_like_icon_selected"
        />


</android.support.constraint.ConstraintLayout>
